--- a/Card Hover Effect 2/flex.css
+++ b/Card Hover Effect 2/flex.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap');
 
 *{
-    margin:0;
+    margin:0px;
     padding:0;
     font-family:'Roboto',sans-serif;
 }
